Thu Sep  8 11:29:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* hash.c (rb_hash_transform_values, rb_hash_transform_values_bang):
	  Rename map_v to transform_values.
	  [Feature #12512] [ruby-core:76095]

	* test/ruby/test_hash.rb: ditto.

Thu Sep  8 10:08:35 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* {ext,test}/openssl: Import Ruby/OpenSSL 2.0.0.beta.2. The full commit
	  history since v2.0.0.beta.1 can be found at:
	  https://github.com/ruby/openssl/compare/v2.0.0.beta.1...v2.0.0.beta.2

Thu Sep  8 07:23:34 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0.beta2
	  Fixed ri parse defect with left-hand matched classes.
	  https://github.com/rdoc/rdoc/pull/420

Thu Sep  8 01:12:47 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_s_used_refinements): new method
	  Module.used_refinements.  based on the patch by Charlie
	  Somerville.  [Feature #7418] [ruby-core:49805]

Wed Sep  7 17:50:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/util.h (setenv): remove POSIX-noncompliant
	  definition with 2 arguments.

Wed Sep  7 17:35:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* unicode/8.0.0/casefold.h, name2ctype.h, unicode/data/8.0.0:
	  removing directories/files related to Unicode version 8.0.0

Wed Sep  7 17:21:55 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): add custom error message
	  argument.  [Feature #11650]

Wed Sep  7 17:13:05 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Updated Unicode version to 9.0.0 [Feature #12513]

	* unicode/9.0.0/casefold.h, name2ctype.h, unicode/data/9.0.0:
	  new directories/files for Unicode version 9.0.0

Wed Sep  7 16:00:45 2016  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: Allow http to https redirection.
	  Note that https to http is still forbidden.
	  [ruby-core:20485] [Feature #859] by Roman Shterenzon.

Wed Sep  7 14:56:59 2016  Kazuki Tsujimoto  <kazuki@callcc.net>
